# mcp-jina-supabase-rag

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SLASH_COMMAND.md  pyproject.toml  supabase_schema.sql
src/: main.py
src/discovery/: __init__.py  url_discoverer.py
src/extraction/: __init__.py  content_extractor.py
src/storage/: __init__.py  supabase_store.py
src/utils/: __init__.py  chunking.py  embeddings.py
